--- a/package.json
+++ b/package.json
@@ -2,25 +2,28 @@
   "name": "nodejs-typescript-1",
   "version": "1.0.0",
   "description": "",
-  "main": "dist/app.js",
+  "main": "dist/server.js",
   "scripts": {
-    "start": "tsc && concurrently \"tsc -w\" \"nodemon dist/app.js\"",
+    "start": "tsc && concurrently \"tsc -w\" \"nodemon dist/server.js\"",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
     "@types/express": "^4.17.12",
+    "body-parser": "^1.19.0",
     "cors": "^2.8.5",
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
     "helmet": "^4.6.0",
+    "mongoose": "^5.12.12",
     "typescript": "^4.3.2"
   },
   "devDependencies": {
     "@types/cors": "^2.8.10",
     "@types/dotenv": "^8.2.0",
     "@types/helmet": "^4.0.0",
+    "@types/mongoose": "^5.10.5",
     "@types/node": "^15.6.1",
     "concurrently": "^6.2.0"
   }
