--- a/package.json
+++ b/package.json
@@ -5,13 +5,12 @@
   "main": "dist/server.js",
   "scripts": {
     "start": "tsc && concurrently \"tsc -w\" \"nodemon dist/server.js\"",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "tsc && echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
     "@types/express": "^4.17.12",
-    "body-parser": "^1.19.0",
     "cors": "^2.8.5",
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
