--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "express": "^4.17.1",
     "helmet": "^4.6.0",
     "mongoose": "^5.12.12",
-    "typescript": "^4.3.2"
+    "typescript": "^4.3.2",
+    "winston": "^3.3.3"
   },
   "devDependencies": {
     "@types/cors": "^2.8.10",
