mock data added for students

--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "atob": "^2.1.2",
     "cors": "^2.8.5",
     "dotenv": "^10.0.0",
+    "dummy-json": "^3.0.3",
     "express": "^4.17.1",
     "helmet": "^4.6.0",
     "mongoose": "^5.12.12",
